<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/characters"
        android:icon="@drawable/ic_characters"
        android:title="@string/titles_char_select"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile_edit_avatar"
        android:icon="@drawable/ic_avatar"
        android:title="@string/option_edit_avatar"
        android:iconTint="@color/white"
        app:showAsAction="never"/>

    <item
        android:id="@+id/profile_edit_frame"
        android:icon="@drawable/ic_characters"
        android:title="@string/option_edit_frame"
        android:iconTint="@color/white"
        app:showAsAction="never"/>

</menu>