<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ProfileFragment">

    <FrameLayout
        android:id="@+id/profile_images"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200">

        <ImageView
            android:id="@+id/main_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_1500" />

        <ImageView
            android:id="@+id/main_char_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/empty_user" />

    </FrameLayout>

    <TextView
        android:id="@+id/user_name"
        style="@style/purpleBgTitle"
        app:layout_constraintTop_toBottomOf="@id/profile_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/info_profile_name"
        android:textColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/team_recyclerview"
        app:layout_constraintBottom_toTopOf="@+id/main_buttons"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/purple_500"
        android:padding="5dp" />

    <LinearLayout
        android:id="@+id/main_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/purple_200"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile"
            style="@style/MainScreenButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_characters"
            android:text="@string/btn_profiles" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add"
            style="@style/MainScreenButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_add"
            android:text="@string/btn_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clean"
            style="@style/MainScreenButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_delete"
            android:drawableTint="@color/white"
            android:text="@string/btn_clean" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>